<resources>
    <string name="app_name">Brightly</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="phone_number">Enter 10-digit number</string>
    <string name="newUser">Don\'t have a account?</string>
    <string name="oldUser">Already have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="registration">Registration</string>
    <string name="user_name">Name</string>
    <string name="user_companyname">Company Name</string>
    <string name="user_emial">Email ID</string>
    <string name="channel_name">Category Name</string>
    <string name="create_channel">Create Category</string>
    <string name="channel_description">Category Description</string>
    <string name="title_activity_my_channel">MyCategory</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your Name</string>
    <string name="nav_header_subtitle">Your Mail Id</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edit_channel">Edit Category</string>
    <string name="no_channels_available">No Categories Available</string>
    <string name="setmenu">SetMenu</string>
    <string name="info_edit">Category Info/Edit</string>
    <string name="info">Category Info</string>
    <string name="delete">Delete</string>
    <string name="no_sets_available">No Sets Available</string>
    <string name="no_cards_available">No Cards Available</string>
    <string name="create_set">Create Set</string>
    <string name="set_name">Set Name</string>
    <string name="set_description">Set Description</string>
    <string name="set_info_edit">Set Info/Edit</string>
    <string name="set_info">Set Info</string>
    <string name="card_info_edit">Card Info/Edit</string>
    <string name="card_info">Card Info</string>
    <string name="reorder">Card Reorder / Delete</string>
    <string name="edit_set">Edit Set</string>
    <string name="edit_card">Edit Card</string>
    <string name="card_name">Card Name</string>
    <string name="card_url">https://www.youtube.com/</string>
    <string name="file_steps">Copy a sharable link from any file upload site such as : \n \n    - Google Docs / Sheets / Slides. \n	   - Google Drive. \n    - One Drive. \n     - iCloud.	\n    or any other app.</string>
    <string name="youtube_steps">Steps to Create Youtube Card : \n \n1. Click on YouTube icon above You will be redirected to YouTube app/website. \n2. Browse to the video you want to upload. \n3. Click on Share button. Click on Copy link option in share a link. \n4. On the top left of the screen. Click on Brightly, to navigate back to the Brightly App. \n5. Click on the Text window above and paste the YouTube link copied. \n6. Click on Done.</string>
    <string name="card_url_title">Copy &amp; paste your youtube link here</string>
    <string name="card_file_url_title">Copy &amp; Paste your File Link here</string>
    <string name="card_file_url_hint">https://</string>
    <string name="card_description">Card Description</string>
    <string name="password">Password</string>
    <string name="view_by_catg">Category</string>
    <string name="view_by_set">Set</string>
    <string name="all_channels">All Categories</string>
    <string name="my_channels">My Categories</string>    <string name="my_subscription">Shared With Me</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="create_card">Create Card</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="save_edit">Save Edit</string>
    <string name="save">Save</string>
    <string name="notifications">Notifications</string>
    <string name="alert">Alert</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="registered_emailid">Please enter your Registered phone number below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="search_by_name">Search Contacts</string>
    <string name="share_msg_text">Download Brighly app from Google Play Store/App store @ </string>
    <string name="share_msg_subject">Brighly - Android app</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="sharetext1">Users have to be registered users of Brightly App. Brightly App is available in Android,IOS and Web </string>
    <string name="sharetext2">Note: If your friend does not have the app yet, please use the invite a friend button from the menu options.</string>
    <string name="shretext3">Create a sharable link, Anyone with the link can view this set. Brightly App NOT required.</string>
    <string name="sharetext4">Note: Users cannot view any other information shared by you with them. They will need to download Brightly App to use all feature.</string>
    <string name="share_in_app">Share with specific users</string>
    <string name="share_a_link">Share a public web link</string>
    <string name="share">Share</string>
    <string name="sharing_content_title_text">This Set Info is shared with the below Contacts :</string>
    <string name="add_cards_suggestion">Add Cards using below &quot; + &quot; button</string>
    <string name="paste_file_upload_link_below">Paste File Upload Link Below</string>
    <string name="active_installed">Active (Registered)</string>
    <string name="inactive_not_installed">Inactive (Not Registered)</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="set_comments">Comments List</string>
    <string name="comments_title">Leave your comments here :</string>
    <string name="comments">Enter 250 characters only....</string>
    <string name="share_setting">Sharing Settings : </string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="can_view">Can View</string>
    <string name="can_share">Can Share</string>
    <string name="share_access">Share Link : </string>

</resources>
