<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/chl_grp"

        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_allChannels"
            android:title="@string/all_channels" />

        <item
            android:id="@+id/nav_myChannels"
            android:title="@string/my_channels" />

        <item
            android:id="@+id/nav_mysubscription"
            android:title="@string/my_subscription" />
    </group>

    <group
         android:id="@+id/act_grp"
        android:checkableBehavior="none"

        >
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_invite"
            android:title="@string/invite_friend" />

        <item
            android:id="@+id/nav_about"
            android:title="@string/about_app" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />

        <!--<item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_camera"
            android:icon="@drawable/ic_menu_gallery"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />-->
    </group>

</menu>
