<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_card_list"
        app:showAsAction="always"
        android:icon="@mipmap/list_order"
        android:title="List Order" />
    <item
        android:id="@+id/setInfo_Edit"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="true"
        android:title="@string/set_info_edit" />

    <item
        android:id="@+id/set_CommentsList"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/set_comments" />



    <item
        android:id="@+id/card_reorder"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="true"
        android:title="@string/reorder" />
</menu>
