<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/dimen_20"
    android:orientation="vertical"
    tools:context=".Fragments.LoginFragment">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen10"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/title"
            />

        <EditText
            android:id="@+id/login_phonenumber"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@drawable/edit_text_background"
            android:drawablePadding="@dimen/dimen_8"
            android:gravity="center_vertical"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLength="10"
            android:padding="@dimen/dimen_10"
            android:textColor="@color/black"
            android:textSize="@dimen/mediumtextsize" />

    <EditText
        android:id="@+id/login_password"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="@dimen/dimen_8"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:padding="@dimen/dimen_10"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumtextsize" />


    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_12"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/mediumtextsize" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12"
            android:background="@drawable/login_btn_background"
            android:padding="3dp"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textSize="@dimen/mediumtextsize"
            />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_16"
        >

    <TextView
        android:id="@+id/text_newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_5"
        android:text="@string/newUser"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumtextsize" />

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/text_newUser"
        android:padding="@dimen/dimen_5"
        android:text="@string/signup"
        android:textStyle="bold"
        android:textColor="@color/btn_login"
        android:textSize="@dimen/mediumtextsize" />

    </RelativeLayout>

</LinearLayout>