<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_20"
    tools:context=".Fragments.SignupFragment">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dimen10"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="@dimen/title" />

    <EditText
        android:id="@+id/registration_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="@dimen/dimen_8"
        android:gravity="center_vertical"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:padding="@dimen/dimen_10"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumtextsize" />

    <EditText
        android:id="@+id/registration_phonenumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="@dimen/dimen_8"
        android:gravity="center_vertical"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:maxLength="10"
        android:padding="@dimen/dimen_10"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumtextsize" />

    <EditText
        android:id="@+id/registration_emailid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="@dimen/dimen_8"
        android:gravity="center_vertical"
        android:hint="@string/user_emial"
        android:padding="@dimen/dimen_10"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumtextsize" />

    <EditText
        android:id="@+id/regr_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="@dimen/dimen_8"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/dimen_10"

        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumtextsize" />

    <EditText
        android:id="@+id/regr_cnfrm_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="@dimen/dimen_8"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        android:hint="Confirm Password"
        android:padding="@dimen/dimen_10"
        android:selectAllOnFocus="true"

        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumtextsize" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30"
        android:background="@drawable/login_btn_background"
        android:padding="3dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="@dimen/mediumtextsize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:gravity="center">

        <TextView
            android:id="@+id/text_oldUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_5"
            android:text="@string/newUser"
            android:textColor="@color/black"
            android:textSize="@dimen/mediumtextsize" />

        <TextView
            android:id="@+id/text_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_oldUser"
            android:padding="@dimen/dimen_5"
            android:text="@string/signin"
            android:textColor="@color/btn_login"
            android:textSize="@dimen/mediumtextsize"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>