<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/dimen_8"
    app:layout_constraintCircleRadius="@dimen/dimen_16"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_setting"
        android:textSize="@dimen/mediumtextsize"
        android:gravity="start"
        android:textStyle="bold"
        android:textColor="@color/primary_text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            >

        <TextView
            android:id="@+id/share_access_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_access"
            android:textSize="@dimen/mediumtextsize"
            android:gravity="start"
            android:textStyle="bold"
            android:textColor="@color/secondary_text" />

            <CheckedTextView
                android:id="@+id/text_canView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:gravity="start"
                android:layout_marginLeft="@dimen/dimen_12"
                android:layout_toRightOf="@id/share_access_title"
                android:lineSpacingExtra="28.3sp"
                android:text="@string/can_view"
                android:textStyle="bold"
                android:drawablePadding="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:drawableLeft="@mipmap/can_view"
                android:textColor="@android:color/black"
                android:textSize="@dimen/mediumtextsize" />

            <CheckedTextView
                android:id="@+id/text_canshare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:gravity="start"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_marginLeft="@dimen/dimen_12"
                android:layout_below="@id/text_canView"
                android:layout_toRightOf="@id/share_access_title"
                android:lineSpacingExtra="28.3sp"
                android:drawablePadding="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_20"
                android:drawableLeft="@mipmap/can_share"
                android:textStyle="bold"
                android:text="@string/can_share"
                android:textColor="@android:color/black"
                android:textSize="@dimen/mediumtextsize" />

        </RelativeLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_12"
        android:layout_gravity="right"
        >

        <TextView
            android:id="@+id/btn_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_8"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="@dimen/mediumtextsize"
            android:gravity="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_12"
            android:layout_marginLeft="@dimen/dimen_8"
            android:padding="@dimen/dimen_8"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textSize="@dimen/mediumtextsize"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/btn_login" />

    </LinearLayout>


</LinearLayout>
