<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.CommentsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/mediumtextsize"
        android:paddingLeft="@dimen/dimen_30"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="@string/comments_title" />

    <EditText
        android:id="@+id/edit_comments"
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_background"
        android:gravity="start"
        android:maxLength="250"
        android:hint="@string/comments"
        android:inputType="textCapSentences|textMultiLine"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/secondary_text"
        android:textSize="@dimen/mediumtextsize" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_30"
        android:background="@drawable/login_btn_background"
        android:padding="3dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/mediumtextsize"
        />

</LinearLayout>