<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height_ulternate"
    android:background="@drawable/bg_gradient"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dimen_4"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/image_profile"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/nav_header_desc" />

    <TextView
        android:id="@+id/User_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/image_profile"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_toRightOf="@id/image_profile"
        android:inputType="textCapWords"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="@dimen/sub_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/User_Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/User_Name"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_4"
        android:layout_toRightOf="@id/image_profile"
        android:text="@string/phone_number"
        android:textColor="@color/white"
        android:textSize="@dimen/mediumtextsize"
        android:textStyle="bold" />

</RelativeLayout>
